# covalent

./: .gitignore  README.md  biome.json  build.gradle.kts  gradle.properties  package.json  settings.gradle.kts  tsconfig.json
api/: build.gradle.kts
api/src/main/kotlin/me/palmdevs/covalent/api/: Tweak.kt  TweakBuilder.kt  Utils.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dev-constants.bundle  example.bundle  react-devtools.bundle  xposed_init
app/src/main/cpp/: CMakeLists.txt  lib.cpp
app/src/main/cpp/include/: README
app/src/main/cpp/include/ReactCommon/: RuntimeExecutor.h
app/src/main/cpp/include/jsi/: instrumentation.h  jsi-inl.h  jsi.cpp  jsi.h
app/src/main/kotlin/me/palmdevs/covalent/: Constants.kt  HookHelper.kt  Main.kt
app/src/main/kotlin/me/palmdevs/covalent/tweaks/: CovalentBridgeSupport.kt  CovalentLifecycleSupport.kt  EnableDevSupport.kt  Example.kt  InjectJSI.kt  ScriptLoader.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/main/ts/: dev-constants.ts  example.ts  react-devtools.ts
app/src/main/ts/types/: build.d.ts  react-devtools.d.ts  react-native-hermes.d.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: compile-script.ts
scripts/plugins/: hermesc.ts  shim-aliases.ts
